Added All Pages
Added default html pages for maps, courses, and settings.
Added default css files for maps, coruses, and settings
Added example page switch function in index.js

--- a/TheStudy/www/settings.html
+++ b/TheStudy/www/settings.html
@@ -26,17 +26,14 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/settings.css" />
         <title>The Study</title>
 		
     </head>
     <body>
         
-		<h1>The Study</h1>
+		<h1>Settings</h1>
 		
-		<button onclick="loadSettingsPage()">Settings</button>
-		<button onclick="loadMapsPage()">Maps</button>
-		<button onclick="loadCoursesPage()">Courses</button>
 		
 		<script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
