--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,18 @@
 <html>
     <head>
 		
-		
+		<!-- Enables mobile view-->
+		<script src="components/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
         <meta charset="utf-8" />
+		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+		<meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+		
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
 		<!--Gives correct orientation and disables tap delay used by browsers -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        
         
 		<!-- Javscript and CSS code use for each page -->
 		<script src="js/pageLoader.js" type="text/javascript"></script>
@@ -30,11 +35,11 @@
 		<link rel="import" href="components/bower_components/paper-menu-button/paper-menu-button.html">
 		<link rel="import" href="components/bower_components/paper-drawer-panel/paper-drawer-panel.html">
 		
-		<!-- Enables Polymer elements-->
-		<script src="components/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-		
-		
-		
+		<!-- DEFAULT code: Cordova (Phonegap) execution -->
+		<script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript">
+            app.initialize();
+        </script>
 		<title>The Study</title>	
     </head>
     <body>
@@ -70,10 +75,5 @@
 			</paper-drawer-panel>
 		</div>
 		
-		<!-- DEFAULT code: Cordova (Phonegap) execution -->
-		<script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
     </body>
 </html>
