--- a/www/maps.html
+++ b/www/maps.html
@@ -28,6 +28,7 @@
 		<link rel="import" href="components/bower_components/paper-icon-button/paper-icon-button.html">
 		<link rel="import" href="components/bower_components/iron-icons/iron-icons.html">
 		<link rel="import" href="components/bower_components/paper-menu-button/paper-menu-button.html">
+		<link rel="import" href="components/bower_components/paper-card/paper-card.html">
 		<link rel="import" href="components/bower_components/paper-drawer-panel/paper-drawer-panel.html">
 		
 		<!-- Enables Polymer elements-->
@@ -65,7 +66,12 @@
 						<div><h1>Maps</h1></div>
 					</paper-toolbar>
 						<!-- All element to go in the main screen content area go here-->
-						<div> Main content... </div>
+						<div> 
+							<paper-card class="mapCard" heading="The Study North" >
+								<div class="card-content"><img width=100% src="img/northMap.png"></img></div>
+								<div class="card-content">Caskdjflnbakjshdfhjasbdfjkhasgdhjkf</div>
+							</paper-card>
+						</div>
 				</paper-header-panel>
 			</paper-drawer-panel>
 		</div>
