--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
 		<!--Gives correct orientation and disables tap delay used by browsers -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
         
 		<!-- Javscript and CSS code use for each page -->
 		<script src="js/pageLoader.js" type="text/javascript"></script>
@@ -65,7 +65,10 @@
 						<div><h1>The Study</h1></div>
 					</paper-toolbar>
 						<!-- All element to go in the main screen content area go here-->
-						<div> Main content... </div>
+						<div> The Study is apart of University of Kentucky's transformative learning program. Transformative learning is a 
+						one-stop shop for all students' academic needs. The Study provides programming and services to impact student success at the 
+						University of Kentucky. The overseers of this app is Rachael Deel who is the marketing/PR director and Christie Maier who is the 
+						program coordinator for peer tutoring. </div>
 				</paper-header-panel>
 			</paper-drawer-panel>
 		</div>
