--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
 						one-stop shop for all students' academic needs. The Study provides programming and services to impact student success at the 
 						University of Kentucky. The overseers of this app is Rachael Deel who is the marketing/PR director and Christie Maier who is the 
 						program coordinator for peer tutoring. </div>
-						<img src="The_Study.jpg" alt="The_Study Icon" style="width:100%;height:64px">
+						<img src="The_Study.jpg" alt="The_Study Icon" style="width:128px;height:128px">
 				</paper-header-panel>
 			</paper-drawer-panel>
 		</div>
