--- a/www/courses.html
+++ b/www/courses.html
@@ -30,9 +30,10 @@
 		<link rel="import" href="components/bower_components/paper-menu-button/paper-menu-button.html">
 		<link rel="import" href="components/bower_components/paper-drawer-panel/paper-drawer-panel.html">
 		<link rel="import" href="components/bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+		<link rel="import" href="components/bower_components/paper-item/paper-item.html">
+		<link rel="import" href="components/bower_components/paper-listbox/paper-listbox.html">
+		<link rel="import" href="components/bower_components/paper-card/paper-card.html">
 		
-		<link rel="import" href="bower_components/web-animations-next/web-animations.html">
-		<link rel="import" href="bower_components/web-animations-js/web-animations.html">
 		<!-- Enables Polymer elements-->
 		<script src="components/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 		
@@ -69,24 +70,50 @@
 					</paper-toolbar>
 						<!-- All element to go in the main screen content area go here-->
 						<div> 
-							<paper-card id="courseMenus" heading="options">
+							<paper-card id="courseMenus">
 								<div class="card-content">
 									<paper-dropdown-menu id="campusSelect" label="Location" vertical-align="top" horizontal-align="right">
-										<paper-listbox class="dropdown-content" selected="2">
-											<div><paper-item>North</paper-item></div>
-											<div><paper-item>South</paper-item></div>
-											<div><paper-item>Both</paper-item></div>
+										<paper-listbox class="dropdown-content">
+											<div><paper-item value="north">North</paper-item></div>
+											<div><paper-item value="south">South</paper-item></div>
+											<div><paper-item value="both">Both</paper-item></div>
 										</paper-listbox>
 									</paper-dropdown-menu>
-								
+
+
 									<paper-dropdown-menu id="prefixSelect" label="Prefix" float="right">
-										<paper-listbox class="dropdown-content" selected="2">
-											<div><paper-item>CS</paper-item></div>
+										<paper-listbox class="dropdown-content">
+											<div><paper-item>All</paper-item></div>
 											<div><paper-item>MA</paper-item></div>
-											<div><paper-item>AS</paper-item></div>
+											<div><paper-item>CS</paper-item></div>
 										</paper-listbox>
-									</paper-dropdown-menu>
-								
+									</paper-dropdown-menu>	
+								</div>
+							</paper-card>
+						</div>
+							<div class="scrollable" style="-webkit-overflow-scrolling: touch;"> 
+							<paper-card class="course">
+								<div class="class-head">Accounting 201</div>
+								<div class="class-location">Location: North Campus\n
+									Description: Bow jobs and hookers asna toher text to detcted ofashdfjlakshdfhk </div>
+								<div class="class-times">
+									<paper-menu>
+										  <paper-item>Monday 2:00-10:00 PM</paper-item>
+										  <paper-item>Tuesday 4:00-10:00 PM</paper-item>
+										  <paper-item>Wednesday 2:00-10:00 PM</paper-item>
+										  <paper-item>Thursday 2:00-10:00 PM</paper-item>
+									</paper-menu>								
+								</div>
+							</paper-card>
+							<paper-card class="course">
+								<div class="class-head">Accounting 201</div>
+								<div class="class-location">Location: North Campus\n
+									Description: Bow jobs and hookers asna toher text to detcted ofashdfjlakshdfhk </div>
+								<div class="class-times">
+									<paper-menu>
+										  <paper-item>Monday 2:00-10:00 PM</paper-item>
+										  <paper-item>Tuesday 4:00-10:00 PM</paper-item>
+									</paper-menu>								
 								</div>
 							</paper-card>
 						</div>
