--- a/www/maps.html
+++ b/www/maps.html
@@ -65,7 +65,22 @@
 						<div><h1>Maps</h1></div>
 					</paper-toolbar>
 						<!-- All element to go in the main screen content area go here-->
-						<div> Main content... </div>
+						<style>
+							#map {
+								width: 400px;
+								height: 400px;
+							}
+						</style>
+						<div id="map"></div>
+						<script>
+							function initMap() {
+								var mapDiv = documentgetElementById('map');
+								var map = new google.maps.Map(mapDiv, {
+									center: {lat:44.540, lng:-78.546}, zoom: 8
+								});
+							}
+						</script>
+						<script src = "https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
 				</paper-header-panel>
 			</paper-drawer-panel>
 		</div>
