--- a/www/index.html
+++ b/www/index.html
@@ -65,10 +65,11 @@
 						<div><h1>The Study</h1></div>
 					</paper-toolbar>
 						<!-- All element to go in the main screen content area go here-->
-						<div> The Study is apart of University of Kentucky's transformative learning program. Transformative learning is a 
+						<center><h3>About The Study</h3></center>
+						<p> The Study is apart of University of Kentucky's transformative learning program. Transformative learning is a 
 						one-stop shop for all students' academic needs. The Study provides programming and services to impact student success at the 
 						University of Kentucky. The overseers of this app is Rachael Deel who is the marketing/PR director and Christie Maier who is the 
-						program coordinator for peer tutoring. </div>
+						program coordinator for peer tutoring. </p>
 						<center><img src="The_Study.jpg" alt="The_Study Icon" style="width:256px;height:256px"></center>
 				</paper-header-panel>
 			</paper-drawer-panel>
