--- a/www/maps.html
+++ b/www/maps.html
@@ -65,7 +65,14 @@
 						<div><h1>Maps</h1></div>
 					</paper-toolbar>
 						<!-- All element to go in the main screen content area go here-->
-						
+						<center><h3>The Study on North Campus</h3></center>
+						<br>
+						<center><img src="Study North.png" alt="Study North Campus" style="width:400px;height400px"></center>
+						<br>
+						<hr>
+						<center><h3>The Study on South Campus</h3></center>
+						<br>
+						<center><img src="Study South.png" alt="Study South Campus" style="width:400px;height400px"></center>
 				</paper-header-panel>
 			</paper-drawer-panel>
 		</div>
