--- a/www/index.html
+++ b/www/index.html
@@ -65,11 +65,14 @@
 						<div><h1>The Study</h1></div>
 					</paper-toolbar>
 						<!-- All element to go in the main screen content area go here-->
+						<!--Creating a header for the main content on the page-->
 						<center><h3>About The Study</h3></center>
+						<!--Inserting some text that will fill the page in paragraph format-->
 						<p> The Study is apart of University of Kentucky's transformative learning program. Transformative learning is a 
 						one-stop shop for all students' academic needs. The Study provides programming and services to impact student success at the 
 						University of Kentucky. The overseers of this app is Rachael Deel who is the marketing/PR director and Christie Maier who is the 
 						program coordinator for peer tutoring. </p>
+						<!--Inserting an image to the page that is centered-->
 						<center><img src="The_Study.jpg" alt="The_Study Icon" style="width:256px;height:256px"></center>
 				</paper-header-panel>
 			</paper-drawer-panel>
