--- a/platforms/browser/www/maps.html
+++ b/platforms/browser/www/maps.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!--
- Need to put file description here
+Maps Pages
+
+Displays the 3 campus locations The Study offers and links to thier map lcoation
 -->
 <html>
     <head>
@@ -57,7 +59,6 @@
 						<div><paper-button class="drawer" onclick="loadHomePage()"><h2><iron-icon icon="home"></iron-icon> Home</h2></paper-button></div>
 						<div><paper-button class="drawer" onclick="loadCoursesPage()"><h2><iron-icon icon="dns"></iron-icon> Courses</h2></paper-button></div>
 						<div><paper-button class="drawer" onclick="loadMapsPage()"><h2><iron-icon icon="explore"></iron-icon> Maps</h2></paper-button></div>
-						<div><paper-button class="drawer" onclick="loadSettingsPage()"><h2><iron-icon icon="settings"></iron-icon> Settings</h2></paper-button></div>
 				</paper-header-panel>
 				<paper-header-panel main>
 					<paper-toolbar>
