--- a/platforms/browser/www/courses.html
+++ b/platforms/browser/www/courses.html
@@ -37,7 +37,8 @@
 		<link rel="import" href="components/bower_components/paper-listbox/paper-listbox.html">
 		<link rel="import" href="components/bower_components/paper-card/paper-card.html">
 		<link rel="import" href="components/bower_components/paper-menu/paper-menu.html">
-		
+		<link rel="import" href="components/bower_components/paper-tabs/paper-tabs.html">
+		<link rel="import" href="components/bower_components/paper-tab/paper-tab.html">		
 
 		<!-- Enables Polymer elements-->
 		<script src="components/bower_components/webcomponentsjs/webcomponents.js"></script>
