--- a/www/index.html
+++ b/www/index.html
@@ -95,6 +95,7 @@
 							<h3 align="center"><a href="http://www.uky.edu/AE//">Visit our website for more information</a></h3>
 							
 							<!--Inserting an image to the page that is centered-->
+							<center><img src="The_Study.jpg" alt="The_Study Icon" style="width:256px;height:256px"></center>
 						</div>
 				</paper-header-panel>
 			</paper-drawer-panel>
